# pddtests

./: CMakeLists.txt  Exam.qml  List.qml  Main.qml  RandTest.qml  Settings.qml  Welcome.qml  filereader.cpp  filereader.h  main.cpp  manager.cpp  manager.h  src.qrc  translator.cpp  translator.h
QtAndroidTools/: CMakeLists.txt  QAndroidAdMobBanner.cpp  QAndroidAdMobInterstitial.cpp  QAndroidAdMobRewardedAd.cpp  QAndroidAudio.cpp  QAndroidBatteryState.cpp  QAndroidGoogleAccount.cpp  QAndroidGoogleDrive.cpp  QAndroidImages.cpp  QAndroidImages.h  QAndroidNotification.cpp  QAndroidPlayStore.cpp  QAndroidScreen.cpp  QAndroidSharing.cpp  QAndroidSignalStrength.cpp  QAndroidSystem.cpp  QAndroidSystem.h  QAndroidUserMessagingPlatform.cpp  QtAndroidTools.cpp
android/: AndroidManifest.xml  build.gradle
assets/languages/: tr_ru_RU.qm  tr_uz_UZ.qm  tr_uz_UZ@cyrillic.qm
parse/parse_ru/1/: 1.txt  12.txt  14.txt  16.txt  17.txt  19.txt  2.txt  20.txt  3.txt  6.txt  9.txt
parse/parse_ru/10/: 10.txt  13.txt  14.txt  16.txt  18.txt  19.txt  2.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
parse/parse_ru/11/: 1.txt  15.txt  16.txt  19.txt  5.txt  6.txt
parse/parse_ru/12/: 12.txt  13.txt  14.txt  16.txt  17.txt  18.txt  19.txt  20.txt  5.txt  8.txt  9.txt
parse/parse_ru/13/: 11.txt  15.txt  2.txt  5.txt  6.txt  8.txt
parse/parse_ru/14/: 15.txt  19.txt  7.txt  8.txt  9.txt
parse/parse_ru/15/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  2.txt  3.txt  5.txt
parse/parse_ru/16/: 1.txt  10.txt  11.txt  14.txt  15.txt  16.txt  3.txt  4.txt  5.txt  7.txt  8.txt  9.txt
parse/parse_ru/17/: 1.txt  10.txt  11.txt  12.txt  14.txt  16.txt  20.txt  4.txt  6.txt  7.txt  8.txt  9.txt
parse/parse_ru/18/: 1.txt  10.txt  11.txt  12.txt  14.txt  15.txt  17.txt  2.txt  20.txt  3.txt  7.txt  9.txt
parse/parse_ru/19/: 11.txt  12.txt  14.txt  17.txt  18.txt  19.txt  20.txt  3.txt  4.txt  6.txt  8.txt
parse/parse_ru/2/: 11.txt  13.txt  20.txt  4.txt
parse/parse_ru/20/: 1.txt  11.txt  12.txt  13.txt  14.txt  17.txt  19.txt  5.txt  6.txt  8.txt
parse/parse_ru/21/: 10.txt  11.txt  12.txt  2.txt  20.txt  5.txt  7.txt  8.txt
parse/parse_ru/22/: 1.txt  12.txt  14.txt  15.txt  19.txt  20.txt  3.txt  6.txt  9.txt
parse/parse_ru/23/: 10.txt  12.txt  13.txt  14.txt  15.txt  16.txt  4.txt  6.txt  7.txt  9.txt
parse/parse_ru/24/: 10.txt  11.txt  12.txt  14.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt
(+1823 files in other folders)
